# src/routes/Specifications.routes.ts
@@ -1,11 +1,12 @@
 import { Router } from "express"
 
-import { createSpecificationController } from "../modules/cars/useCases/CreateSpecification"
+import { CreateSpecificationController } 
+from "../modules/cars/useCases/CreateSpecification/CreateSpecificationController"
 
 const specificationsRoutes = Router() 
 
-specificationsRoutes.post ("/", (request,response) => {
-   return createSpecificationController.handle(request,response)
-})
+const createSpecificationController = new CreateSpecificationController()
+
+specificationsRoutes.post ("/", createSpecificationController.handle)
 
 export {specificationsRoutes} 
