# src/routes/categories.routes.ts
@@ -1,9 +1,9 @@
 import { Router } from 'express'
 
-import createCategoryController from '../modules/cars/useCases/createCategory'
-import { listCategoriesController } from '../modules/cars/useCases/listCategories'
+import { CreateCategoryController } from '../modules/cars/useCases/createCategory/CreateCategoryController'
+import { ListCategoryController } from '../modules/cars/useCases/listCategories/ListCategoryController'
 import multer  from 'multer'
-import { importCategoryController } from '../modules/cars/useCases/ImportCategory'
+import { ImportCategoryController } from '../modules/cars/useCases/ImportCategory/ImportCategoryController'
 
 const categoriesRoutes = Router()
 
@@ -11,18 +11,17 @@ const upload = multer({
    dest: "./tmp"
 })
 
-categoriesRoutes.post ("/", (request, response) => {
-   console.log ("reload")
-   return createCategoryController().handle(request,response)
+const createCategoryController = new CreateCategoryController()
+const importCategoryController = new ImportCategoryController()
+const listCategoryController = new ListCategoryController()
+
+categoriesRoutes.post ("/", createCategoryController.handle)
+
+categoriesRoutes.get('/', (req, res) => {
+   return listCategoryController.handle(req, res)
 })
 
-categoriesRoutes.get('/', (request, response) => {
-   return listCategoriesController.handle(request, response)
-})
-
-categoriesRoutes.post("/import", upload.single("file"), (request,response) => {
-    return importCategoryController.handle(request, response)
-   
-})
+categoriesRoutes.post("/import", upload.single("file"),
+importCategoryController.handle)
 
 export { categoriesRoutes }
