# src/swagger.json
@@ -1,78 +1,143 @@
 {
-    "openapi" : "3.0.0",
-    "info" : {
-        "title": "RentalX Documentation",
-        "Description": "This is an Api Rent",
-        "version" : "1.0.0",
-        "contact" : {
-            "email" : "caguilherme14@gmail.com"
+    "openapi": "3.0.0",
+    "info": {
+        "title": "Rentx Documentation",
+        "description": "This is an API Rent",
+        "version": "1.0.0",
+        "contact": {
+            "email": "email@email.com"
         }
-    }, "paths" : {
-          "/categories" : {
+    },
+    "paths":{
+        "/categories":{
             "post": {
-                "tags" : ["Category"],
-              "sumarry" : "Create a category",
-                "description" : "Create a New Category",
-               "requestBody" : {
-            "content" : {
-        "application/json" : {
-            "schema" : {
-                "type" : "object",
-                "properties" : {
-                   "name" : {
-                      "type" : "string"
-                   },
-                   "description" : {
-                      "type" : "string"
-                   }
-                },        
-                   "example" : {
-                      "name" : "categoryTest",
-                      "description" : "Category description"
-                   }
-
-                 }
-               }
-             }
-           },
-           "responses" : {
-            "201" : {
-                "description": "Created"
+                "tags": ["Category"],
+                "summary": "Create a category",
+                "description": "Create a new category",
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "type": "object",
+                                "properties": {
+                                    "name": {
+                                        "type": "string"
+                                    },
+                                    "description": {
+                                        "type": "string"
+                                    }
+                                },
+                                "example": {
+                                    "name": "Category name sample",
+                                    "description": "Category description sample"
+                                }
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "201": {
+                        "description": "Created"
+                    },
+                    "500": {
+                        "description": "Category already exists"
+                    }
+                }
             },
-            "500" : {
-               "description" : "Category already exists"
-            } 
-           }
-
-         },
-         "get" : {
-             "tags": ["Category"],
-             "summary" : "Listando as categorias",
-             "description" : "Listando todas as categorias",
-            "responses" : {
-                "200" : {
-                    "description": "Sucess" ,
-                      "content" : {
-                        "application/json" : {
-                            "schema" : {
-                                "type" : "array",
-                                "items" : {
-                                    "type" : "object",
-                                    "properties" : {
-                                        "name" : {
-                                            "type" : "string"
-                                        },
-                                        "description" : {
-                                            "type": "string"
+            "get": {
+                "tags": ["Category"],
+                "summary": "List all category",
+                "description": "Create all category",
+                "responses": {
+                    "200": {
+                        "description": "Success",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "array",
+                                    "items": {
+                                        "type": "object",
+                                        "properties": {
+                                            "name": {
+                                                "type": "string"
+                                            },
+                                            "description": {
+                                                "type": "string"
+                                            }
                                         }
                                     }
                                 }
                             }
                         }
-                      }
+                    }
                 }
-            }  
-         }  
-       }
-     }
-  }
+                
+            }
+        },
+        "/categories/import":{
+            "post" : {
+            "tags" : ["Category"],
+                "summary" : "Upload a new category",
+                "description" : "Upload a new category",
+                "requestBody": {
+                        "content" : {
+                           "multipart/form-data": {
+                              "schema" : {
+                                "type" : "object",
+                                "properties" : {
+                                    "file" : {
+                                        "type" : "string",
+                                        "format" : "binary"
+                                    }
+                                }
+                              }
+                        }
+                    }
+                },
+                "responses" : {
+                    "201" : {
+                     "description": "Created"
+                    }
+                }
+            }
+        },
+        "/specifications" : {
+            "post" : {
+                "tags" : ["Specifications"],
+                "summary" : "Create a specification",
+                "description" : "Create a new specification",
+               "requestBody" : {
+                "content" : {
+                    "application/json" : {
+                        "schema" : {
+                            "#ref" : "#/definitions/Specification"
+                        }
+                     }
+                  }
+                },
+                "responses" : {
+                    "201" : {
+                        "description": "Created"
+                    },
+                    "500" : {
+                        "description" : "Specification Already exists!"
+                    }
+                } 
+            }
+        },
+        "definitions" : {
+            "Specification" : {
+                "type" : "object",
+                "properties" : {
+                    "name" : {
+                        "type" : "string"
+                    },
+                    "description" : {
+                        "type" : "string"
+                    }
+                }
+            }
+        }
+    }
+    
+}
